# cdk-ec2-cheap

./: README.md  app.py  pyproject.toml  requirements.txt
ec2_cheap/: stack.py
